apps/base/media/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
spec:
  selector:
    app: sonarr
  ports:
    - port: 8989
      targetPort: 8989
  type: ClusterIP
